--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
 autopep8==1.6.0
+bandit==1.7.4
+blinker==1.4
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
 Flask==2.1.2
 Flask-Login==0.6.1
+Flask-Mail==0.9.1
 Flask-WTF==1.0.1
+gitdb==4.0.9
+GitPython==3.1.27
 idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 passlib==1.7.4
+pbr==5.9.0
 pycodestyle==2.8.0
+PyJWT==2.4.0
+PyYAML==6.0
 requests==2.28.1
+smmap==5.0.0
+stevedore==3.5.0
 toml==0.10.2
 urllib3==1.26.10
 Werkzeug==2.1.2
